--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,40 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.dbViud {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+}
+.kGGmIE {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+}
+
+.iKTLDi {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+}
+
+.gqlcKq {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+}
+
+.ewfgjA {
+  border-radius: 10px 10px 0px 0px !important;
+}
+
+.gqlcKq {
+  border-radius: 0px 0px 10px 10px !important;
+}
+
+.fgDBKj {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+}
+
+.jAuXvh {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+}
