--- a/app/globals.css
+++ b/app/globals.css
@@ -25,11 +25,27 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.hGcGYK {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+}
+
 .dbViud {
   background-color: var(--background) !important;
   color: var(--foreground) !important;
 }
+
+.jAeIVm {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+}
+
 .kGGmIE {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+}
+
+.kyUkiW {
   background-color: var(--background) !important;
   color: var(--foreground) !important;
 }
@@ -37,6 +53,12 @@ body {
 .iKTLDi {
   background-color: var(--background) !important;
   color: var(--foreground) !important;
+}
+
+.RRdMi {
+  background-color: var(--background) !important;
+  color: var(--foreground) !important;
+  border-radius: 0px 0px 10px 10px !important;
 }
 
 .gqlcKq {
